tests/InvalidSyntax/returnOutsideFunction.ts
import b from './b';
import a from './a';

// Can't return outside of a function
return 123;
